# pypkg-semver-spike

./: LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: cd.yml  pkg_and_release.yml  promote_release.yml  release_candidate.yml
pypkg_semver_spike/: __init__.py  hello_world.py
tests/: cli_test.py  test_hello_world.py
